[package]
name = "rlr-gtk"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "pixel screen ruler"
repository = "https://github.com/epilys/rlr"
keywords = ["ruler", "screen"]

[dependencies]
gtk = "^0.14"

[[bin]]
name = "rlr"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
