[package]
name = "rlr-gtk"
version = "0.3.0"
authors = ["Manos Pitsidianakis <manos@pitsidianak.is>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "pixel screen ruler"
repository = "https://github.com/epilys/rlr"
homepage = "https://github.com/epilys/rlr"
categories = ["graphics"]
keywords = ["pixel", "pixels", "display", "ruler", "screen"]
rust-version = "1.70.0"

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }

[[bin]]
name = "rlr"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
